Create simple CR REST backend with mysql connection

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Server properties
+server.port=8000
 
+# Database Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/jobs?useSSl=false
+spring.datasource.username=jobsuser
+spring.datasource.password=userpass
+
+# Hibarnate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
