--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,12 @@ version: '3.1'
 
 services:
 
+  worker:
+    build: ./worker
+    restart: always
+    ports:
+      - "5000:5000"
+      
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
