--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 # Server properties
-server.port=8000
+server.port=${BACKEND_PORT:8000}
 
 # Database Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/jobs?useSSl=false
+database.host=${MYSQL_DB_HOST:localhost}
+database.port=${MYSQL_DB_PORT:3306}
+database.db=${MYSQL_DB_DB_NAME:jobs}
+#spring.datasource.url=jdbc:mysql://localhost:3306/jobs?useSSl=false
+spring.datasource.url=jdbc:mysql://${database.host}:${database.port}/${database.db}?useSSl=false
+
 spring.datasource.username=jobsuser
 spring.datasource.password=userpass
 
