Make connections in backend configurable via env vars

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # Server properties
 server.port=${BACKEND_PORT:8000}
 
+# Worker properties
+worker.host=${WORKER_HOST:localhost}
+worker.port=${WORKER_PORT:5000}
+
 # Database Properties
 database.host=${MYSQL_DB_HOST:localhost}
 database.port=${MYSQL_DB_PORT:3306}
