--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@ version: '3.1'
 
 services:
 
+  proxy:
+    image: nginx:alpine
+    volumes: 
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+    depends_on:
+      - backend
+      - frontend
+
   backend:
     build:
       context: ./backend
@@ -12,9 +22,14 @@ services:
       - "8000:8000"
     environment: 
       - BACKEND_PORT=8000
+      - WORKER_HOST=worker
+      - WORKER_PORT=5000
       - MYSQL_DB_HOST=db
       - MYSQL_DB_PORT=3306
       - MYSQL_DB_DB_NAME=jobs
+    depends_on:
+      - db
+      - worker
 
   frontend:
     build:
@@ -27,6 +42,9 @@ services:
       - 3000:3000
     environment:
       - CHOKIDAR_USEPOLLING=true
+      # - BACKEND_HOST=backend
+      # - BACKEND_PORT=8000
+      # - BACKEND_API_PATH=/api/v1
     stdin_open: true
   
   worker:
@@ -57,6 +75,8 @@ services:
     restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - db
   
 volumes: 
   db-data:
