--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ version: '3.1'
 services:
 
   proxy:
-    image: nginx:alpine
+    build:
+      context: ./proxy
+      dockerfile: Dockerfile
+    image: morova/kubedepend-proxy:1.0
     volumes: 
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
