--- a/k8s-deployment/005-services.yaml
+++ b/k8s-deployment/005-services.yaml
@@ -1,6 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: kubedepend-proxy
+  namespace: kubedepend
+spec:
+  selector:
+    app: kubedepend-proxy-app
+  ports:
+  - port: 80
+    targetPort: proxy-port
+
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
   name: kubedepend-backend
   namespace: kubedepend
 spec:
