Run stack on K8s minikube

--- a/k8s-deployment/004-deployments.yaml
+++ b/k8s-deployment/004-deployments.yaml
@@ -24,6 +24,14 @@ spec:
         ports:
         - containerPort: 80
           name: proxy-port
+        volumeMounts:
+          - name: proxy-config-volume
+            mountPath: /etc/nginx
+              
+      volumes:
+          - name: proxy-config-volume
+            configMap:
+              name: proxy-config
 
 
 ---
