--- a/k8s-deployment/001-configmaps.yaml
+++ b/k8s-deployment/001-configmaps.yaml
@@ -20,6 +20,8 @@ metadata:
   namespace: kubedepend
 data:
   BACKEND_PORT: "8000"
+  WORKER_HOST: kubedepend-worker
+  WORKER_PORT: "5000"
   MYSQL_DB_HOST: kubedepend-db.kubedepend.svc.cluster.local
   MYSQL_DB_PORT: "3306"
   MYSQL_DB_DB_NAME: jobs
@@ -34,3 +36,59 @@ metadata:
   namespace: kubedepend
 data:
   CHOKIDAR_USEPOLLING: "true"
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: proxy-config
+  namespace: kubedepend
+data:
+  nginx.conf: |-
+    user  nginx;
+    worker_processes  auto;
+
+    error_log  /var/log/nginx/error.log warn;
+    pid        /var/run/nginx.pid;
+
+
+    events {
+      worker_connections  1024;
+    }
+
+
+    http {
+       # include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
+
+        log_format  main  'HOST $host ------- $remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log  /var/log/nginx/access.log  main;
+
+        sendfile        on;
+
+        keepalive_timeout  65;
+
+        map $http_upgrade $connection_upgrade {
+            default upgrade;
+            ''      close;
+          }
+
+        server {
+          server_name    127.0.0.1 localhost;
+          location /api {
+            proxy_pass http://kubedepend-backend:8000;
+            proxy_set_header Host $host;
+          }
+
+          location / {
+            proxy_pass http://kubedepend-frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header Upgrade $http_upgrade;
+                  proxy_set_header Connection $connection_upgrade;
+          }
+        }
+    }
