--- a/k8s-deployment/005-services.yaml
+++ b/k8s-deployment/005-services.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   selector:
     app: kubedepend-proxy-app
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: proxy-port
