--- a/k8s-deployment/004-deployments.yaml
+++ b/k8s-deployment/004-deployments.yaml
@@ -128,6 +128,13 @@ spec:
         ports:
         - containerPort: 5000
           name: worker-port
+        readinessProbe:
+              httpGet:
+                path: /api/jobs/busy
+                port: 5000
+              timeoutSeconds: 2
+              periodSeconds: 5
+              initialDelaySeconds: 5
 
 ---
 
