--- a/k8s-deployment/400-hpa.yaml
+++ b/k8s-deployment/400-hpa.yaml
@@ -13,12 +13,16 @@ spec:
   metrics:
       - type: Object
         object:
-              metric:
-                  name: readyReplicas
-              describedObject:
-                  apiVersion: apps/v1
-                  kind: Deployment
-                  name: kubedepend-worker-depl
-              target:
-                  type: Value
-                  value: 2
+          metric:
+              name: available_worker_ratio
+          describedObject:
+              apiVersion: apps/v1
+              kind: Deployment
+              name: kubedepend-worker-depl
+          target:
+              type: Value
+              value: 1
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 30 # default is 300
+      
