Add blackbox exporter to the stack in progress

--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -1773,7 +1773,8 @@ prometheus:
     ## prometheus resource to be created with selectors based on values in the helm deployment,
     ## which will also match the servicemonitors created
     ##
-    serviceMonitorSelectorNilUsesHelmValues: true
+    # serviceMonitorSelectorNilUsesHelmValues: true
+    serviceMonitorSelectorNilUsesHelmValues: false
 
     ## ServiceMonitors to be selected for target discovery.
     ## If {}, select all ServiceMonitors
@@ -1793,7 +1794,9 @@ prometheus:
     ## prometheus resource to be created with selectors based on values in the helm deployment,
     ## which will also match the podmonitors created
     ##
-    podMonitorSelectorNilUsesHelmValues: true
+    # podMonitorSelectorNilUsesHelmValues: true
+    podMonitorSelectorNilUsesHelmValues: false
+    
 
     ## PodMonitors to be selected for target discovery.
     ## If {}, select all PodMonitors
@@ -1943,7 +1946,25 @@ prometheus:
     ## The scrape configuraiton example below will find master nodes, provided they have the name .*mst.*, relabel the
     ## port to 2379 and allow etcd scraping provided it is running on all Kubernetes master nodes
     ##
-    additionalScrapeConfigs: []
+    additionalScrapeConfigs:
+
+      - job_name: 'kube-api-blackbox'
+        scrape_interval: 10s
+        metrics_path: /probe
+        params:
+          module: [http_2xx]
+        static_configs:
+          - targets:
+              - http://prometheus-blackbox-exporter.monitoring.svc:9115
+              - http://kubedepend-proxy.kubedepend.svc.cluster.local:80
+        relabel_configs:
+          - source_labels: [__address__]
+            target_label: __param_target
+          - source_labels: [__param_target]
+            target_label: instance
+          - target_label: __address__
+            replacement: 'http://prometheus-blackbox-exporter.monitoring.svc.cluster.local:9115'
+
     # - job_name: kube-etcd
     #   kubernetes_sd_configs:
     #     - role: node
