--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -3,4 +3,5 @@ server.port=${WORKER_PORT:5000}
 # ActiveMQ
 
 activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
-activemq.queue=${ACTIVEMQ_QUEUE:jobqueue}
+activemq.worker.queue=${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
+activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:JobBackendQueue}
