Implement communication between backend and worker through ActiveMQ

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.password=userpass
 
 # Hibarnate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+
+# ActiveMQ
+
+activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
+activemq.worker.queue=${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
+activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:JobBackendQueue}
