--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=${WORKER_PORT:5000}
 
+management.endpoints.web.exposure.include=health,info,prometheus
+
+
 # ActiveMQ
 
 activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
