--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -7,4 +7,4 @@ management.endpoints.web.exposure.include=health,info,prometheus
 
 activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
 activemq.worker.queue=${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
-activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:JobBackendQueue}
+activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
