--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
 activemq.worker.queue=${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
-activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:JobBackendQueue}
+activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
