Configure activemq to be scraped by Prometheus

--- a/k8s-deployment/005-services.yaml
+++ b/k8s-deployment/005-services.yaml
@@ -74,6 +74,9 @@ kind: Service
 metadata:
   name: kubedepend-activemq
   namespace: kubedepend
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
 spec:
   selector:
     app: kubedepend-activemq-app
