Configure worker pods to be scraped by Prometheus

--- a/k8s-deployment/004-deployments.yaml
+++ b/k8s-deployment/004-deployments.yaml
@@ -116,6 +116,10 @@ spec:
     metadata:
       labels:
         app: kubedepend-worker-app
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/actuator/prometheus"
+        prometheus.io/port: "5000"
     spec:
       containers:
       - name: kubedepend-worker
