--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -1369,6 +1369,8 @@ serverFiles:
       # service then set this appropriately.
       - job_name: 'kubernetes-service-endpoints'
 
+        scrape_interval: 10s
+
         kubernetes_sd_configs:
           - role: endpoints
 
@@ -1502,6 +1504,8 @@ serverFiles:
       # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
       # * `prometheus.io/port`: Scrape the pod on the indicated port instead of the default of `9102`.
       - job_name: 'kubernetes-pods'
+
+        scrape_interval: 10s
 
         kubernetes_sd_configs:
           - role: pod
