--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -5,6 +5,6 @@ management.endpoints.web.exposure.include=health,info,prometheus
 
 # ActiveMQ
 
-activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
+activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}?jms.prefetchPolicy.queuePrefetch=1
 activemq.worker.queue=${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
 activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
