--- a/k8s-deployment/005-services.yaml
+++ b/k8s-deployment/005-services.yaml
@@ -47,6 +47,11 @@ kind: Service
 metadata:
   name: kubedepend-worker
   namespace: kubedepend
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/actuator/prometheus"
+    prometheus.io/port: "5000"
+
 spec:
   selector:
     app: kubedepend-worker-app
