--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -1604,6 +1604,43 @@ extraScrapeConfigs: |
         - kubedepend-activemq.kubedepend.svc.cluster.local:8080
         labels:
           namespace: kubedepend
+  
+  - job_name: worker-pods
+    kubernetes_sd_configs:
+    - role: pod
+      namespaces:
+        names:
+          - 'kubedepend'
+      selectors:
+        - role: pod
+          label: app=kubedepend-worker-app
+    
+    relabel_configs:
+        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+          action: keep
+          regex: true
+        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
+          action: replace
+          target_label: __metrics_path__
+          regex: (.+)
+        - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+          action: replace
+          regex: ([^:]+)(?::\d+)?;(\d+)
+          replacement: $1:$2
+          target_label: __address__
+        - action: labelmap
+          regex: __meta_kubernetes_pod_label_(.+)
+        - source_labels: [__meta_kubernetes_namespace]
+          action: replace
+          target_label: namespace
+        - source_labels: [__meta_kubernetes_pod_name]
+          action: replace
+          target_label: kubernetes_pod_name
+        - source_labels: [__meta_kubernetes_pod_phase]
+          regex: Pending|Succeeded|Failed
+          action: drop
+
+    
 
 # Adds option to add alert_relabel_configs to avoid duplicate alerts in alertmanager
 # useful in H/A prometheus with different external labels but the same alerts
