Change scaleDown behavior of HPA

--- a/k8s-deployment/400-hpa.yaml
+++ b/k8s-deployment/400-hpa.yaml
@@ -22,7 +22,7 @@ spec:
           target:
               type: Value
               value: "1"
-  # behavior:
-  #   scaleDown:
-  #     stabilizationWindowSeconds: 30 # default is 300
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 30 # default is 300
       
