Set resource limits to kubedepend stack

--- a/k8s-deployment/004-deployments.yaml
+++ b/k8s-deployment/004-deployments.yaml
@@ -17,10 +17,10 @@ spec:
       - name: kubedepend-proxy
         image: morova/kubedepend-proxy:1.0
         imagePullPolicy: Always
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "500m"
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 80
           name: proxy-port
@@ -58,10 +58,10 @@ spec:
         envFrom:
             - configMapRef:
                   name: backend-config
-        # resources:
-        #   limits:
-        #     memory: "256Mi"
-        #     cpu: "200m"
+        resources:
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
         ports:
         - containerPort: 8000
           name: backend-port
@@ -91,10 +91,10 @@ spec:
             - configMapRef:
                   name: frontend-config
         stdin: true
-        # resources:
-        #   limits:
-        #     memory: "256Mi"
-        #     cpu: "100m"
+        resources:
+          limits:
+            memory: "256Mi"
+            cpu: "100m"
         ports:
         - containerPort: 3000
           name: frontend-port
@@ -128,21 +128,13 @@ spec:
         envFrom:
             - configMapRef:
                   name: worker-config
-        # resources:
-        #   limits:
-        #     memory: "256Mi"
-        #     cpu: "100m"
+        resources:
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
         ports:
         - containerPort: 5000
           name: worker-port
-        # readinessProbe:
-        #       httpGet:
-        #         path: /api/jobs/busy
-        #         port: 5000
-        #       timeoutSeconds: 2
-        #       periodSeconds: 3
-        #       initialDelaySeconds: 5
-        #       failureThreshold: 1
 
 ---
 
@@ -168,42 +160,42 @@ spec:
         envFrom:
             - configMapRef:
                   name: mysql-config
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "100m"
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "100m"
         ports:
         - containerPort: 3306
           name: db-port
 
----
+# ---
 
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: kubedepend-adminer-depl
-  namespace: kubedepend
-spec:
-  selector:
-    matchLabels:
-      app: kubedepend-adminer-app
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: kubedepend-adminer-app
-    spec:
-      containers:
-      - name: kubedepend-adminer
-        image: adminer:4.7.7
-        imagePullPolicy: "IfNotPresent"
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "100m"
-        ports:
-        - containerPort: 8080
-          name: adminer-port
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: kubedepend-adminer-depl
+#   namespace: kubedepend
+# spec:
+#   selector:
+#     matchLabels:
+#       app: kubedepend-adminer-app
+#   replicas: 1
+#   template:
+#     metadata:
+#       labels:
+#         app: kubedepend-adminer-app
+#     spec:
+#       containers:
+#       - name: kubedepend-adminer
+#         image: adminer:4.7.7
+#         imagePullPolicy: "IfNotPresent"
+#         # resources:
+#         #   limits:
+#         #     memory: "128Mi"
+#         #     cpu: "100m"
+#         ports:
+#         - containerPort: 8080
+#           name: adminer-port
 
 
 ---
@@ -226,10 +218,10 @@ spec:
       containers:
       - name: kubedepend-activemq
         image: bwolf/activemq-prometheus
-        # resources:
-        #   limits:
-        #     memory: "128Mi"
-        #     cpu: "500m"
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 61616
           name: amq-broker
