--- a/kubedepend/charts/kubedepend-chaos/templates/io-chaos.yaml
+++ b/kubedepend/charts/kubedepend-chaos/templates/io-chaos.yaml
@@ -16,9 +16,15 @@ spec:
       app: kubedepend-db-app
   volumePath: /var/lib/mysql
   path: "/var/lib/mysql/**/*"
+  {{- if .Values.ioChaos.strength == "low"}}
+  delay: "1000ms"
+  {{- else if .Values.ioChaos.strength == "high" }}
   delay: "5000ms"
+  {{- else .Values.ioChaos.strength == "medium" }}
+  delay: "2500ms"
+  {{- else end }}
   percent: 100
-  duration: "400s"
+  duration: "60s"
   scheduler:
-    cron: "@every 10m"
+    cron: "@every 2m"
 {{- end }}
